:recycle: refactor mobile styles to prevent horizontal scrolling

--- a/frontend/scss/components/atoms/video.scss
+++ b/frontend/scss/components/atoms/video.scss
@@ -17,6 +17,7 @@
 
 .#{atom('video')} {
   margin: 0 -20px 32px 0;
+  max-width: 100%;
 
   @media screen and (min-width: 768px) {
     margin-right: -30px;
